[package]
name = "xml_client"
version = "0.1.0"
authors = ["imkgerC <imrund08@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xml-rs = "0.7"
game_sdk = { path = "../game_sdk"}
player = { path = "../player" }
argparse = "0.2.2"
time = "^0.1"